Refatoração nos testes unitários